Prevent button animation on mobile

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -30,7 +30,7 @@
   transition: all 0.3s ease-in-out;
 }
 
-.button:hover {
+.animate.button:hover {
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
   transform: translateY(-7px);
 }
